--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -182,13 +182,16 @@ anchorcolor = blue]{hyperref}
 		\cite{monday.com}
 	\end{figure}
 
-	Finally, using the aforementioned timeline, a gantt chart was created, which gave an overarching view of the project, with tasks performed represented along the vertical axis and the timeline represented along the horizontal axis. This can be seen in the 
+	Finally, using the aforementioned timeline, a gantt chart was created, which gave an overarching view of the project, with tasks performed represented along the vertical axis and the timeline represented along the horizontal axis. This can be found in the appendix (ADD CITE).
 	
 	\subsection{Research and Market Analysis}
-	In order to gauge whether there is a market for the proposed analysis, a survey was carried out in which users were asked about whether they could see themselves using the application features, among other things.
+	In order to gauge whether there is a market for the proposed analysis, a survey was carried out in which users were asked about whether they could see themselves using the application features, among other things. The full survey can be found within the appendix (ADD CITE)
 	
 	\subsubsection{Existing Applications}
 	As previously discusses there exists a variety of similar applications, for which the most prominent will be discussed below, along with
+	
+	\subsubsection{Novelty of the Proposed Application}
+	As discussed in the previous chapter, there exists a range of applications that are suited towards providing a mobile barber service. 
 	
 	\subsection{Deciding on a Platform}
 	\subsubsection{Mobile vs Desktop}
@@ -445,6 +448,16 @@ anchorcolor = blue]{hyperref}
 	\appendix
 	\appendixpage
 	\section{Use Cases}
+	
+	\begin{subappendices}
+		
+	\subsubsection{Use case 1 - }
+	\subsubsection{Use case 2 - }
+	\subsubsection{Use case 3 - }
+	\subsubsection{Use case 4 - }
+	\subsubsection{Use case 5 - }
+	
+	\end{subappendices}
 	\section{Figures}
 	
 	\section{Application Images}
